chore: More translations

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -167,6 +167,7 @@
   "click_to_refresh": "Кликнете, за да обновите",
   "click_words": "Кликнете върху думи в правилен ред",
   "close": "Затвори",
+  "coin_performance": "Изпълнение на монети",
   "comma": "запетая",
   "comment": "коментар",
   "complete": "Завърши",
