--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -167,6 +167,7 @@
   "click_to_refresh": "Feu clic per actualitzar",
   "click_words": "Feu clic a les paraules en ordre correcte",
   "close": "Tancar",
+  "coin_performance": "Rendiment de monedes",
   "comma": "Coma",
   "comment": "Comentari",
   "complete": "Complet",
