--- a/web/angular-wallet/src/locales/de-de.json
+++ b/web/angular-wallet/src/locales/de-de.json
@@ -167,6 +167,7 @@
   "click_to_refresh": "Klicken Sie, um zu aktualisieren",
   "click_words": "Klicke die Wörter in der richtigen Reihenfolge an",
   "close": "Schließen",
+  "coin_performance": "Coin Performance",
   "comma": "Komma",
   "comment": "Kommentar",
   "complete": "Abgeschlossen",
