--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -167,6 +167,7 @@
   "click_to_refresh": "Click to refresh",
   "click_words": "Click words in correct order",
   "close": "Close",
+  "coin_performance": "Coin Performance",
   "comma": "Comma",
   "comment": "Comment",
   "complete": "Complete",
