--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -167,6 +167,7 @@
   "click_to_refresh": "Haga clic para actualizar",
   "click_words": "Haga clic en las palabras en el orden correcto.",
   "close": "Cerrar",
+  "coin_performance": "Rendimiento de monedas",
   "comma": "Coma",
   "comment": "Comentario",
   "complete": "Completo",
