--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -167,6 +167,7 @@
   "click_to_refresh": "Päivitä napsauttamalla",
   "click_words": "Napsauta sanoja oikeassa järjestyksessä",
   "close": "Sulje",
+  "coin_performance": "Kolikon suorituskyky",
   "comma": "Pilkku",
   "comment": "Kommentti",
   "complete": "Valmis",
