--- a/web/angular-wallet/src/locales/fr.json
+++ b/web/angular-wallet/src/locales/fr.json
@@ -167,6 +167,7 @@
   "click_to_refresh": "Cliquez pour rafraîchir",
   "click_words": "Cliquez sur les mots dans le bon ordre",
   "close": "Fermer",
+  "coin_performance": "Performance des pièces",
   "comma": "Virgule",
   "comment": "Commentaire",
   "complete": "Compléter",
