--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -167,6 +167,7 @@
   "click_to_refresh": "Fai clic para actualizar",
   "click_words": "Faga clic nas palabras en orde correcta",
   "close": "Close",
+  "coin_performance": "Rendemento de moeda",
   "comma": "Coma",
   "comment": "Comentario",
   "complete": "Completo",
