--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -167,6 +167,7 @@
   "click_to_refresh": "ताज़ा करने के लिए क्लिक करें",
   "click_words": "शब्दों को सही क्रम में क्लिक करें",
   "close": "बंद करें",
+  "coin_performance": "सिक्का प्रदर्शन",
   "comma": "अल्पविराम",
   "comment": "टिप्पणी",
   "complete": "पूरा",
