--- a/web/angular-wallet/src/locales/hr.json
+++ b/web/angular-wallet/src/locales/hr.json
@@ -167,6 +167,7 @@
   "click_to_refresh": "Kliknite za osvježavanje",
   "click_words": "Kliknite riječi ispravnim redoslijedom",
   "close": "Zatvori",
+  "coin_performance": "Coin Performance",
   "comma": "Zarez",
   "comment": "Komentar",
   "complete": "Gotovo",
