--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -167,6 +167,7 @@
   "click_to_refresh": "Klik untuk menyegarkan",
   "click_words": "Klik kata dalam urutan yang benar",
   "close": "Tutup",
+  "coin_performance": "Kinerja Koin",
   "comma": "Koma",
   "comment": "Komentar",
   "complete": "Menyelesaikan",
