--- a/web/angular-wallet/src/locales/it.json
+++ b/web/angular-wallet/src/locales/it.json
@@ -167,6 +167,7 @@
   "click_to_refresh": "Clicca per aggiornare",
   "click_words": "Fai clic sulle parole nell'ordine corretto",
   "close": "Chiudi",
+  "coin_performance": "Prestazioni della moneta",
   "comma": "Virgola",
   "comment": "Commento",
   "complete": "Completo",
