--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -167,6 +167,7 @@
   "click_to_refresh": "クリックして更新",
   "click_words": "正しい順序で単語をクリックします",
   "close": "閉じる",
+  "coin_performance": "コイン性能",
   "comma": "コンマ",
   "comment": "コメント",
   "complete": "完了",
