--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -167,6 +167,7 @@
   "click_to_refresh": "Spustelėkite, jei norite atnaujinti",
   "click_words": "Spustelėkite žodžius teisinga tvarka",
   "close": "Uždaryti",
+  "coin_performance": "Monetų pasirodymas",
   "comma": "Kablelis",
   "comment": "Komentuoti",
   "complete": "Pabaigta",
