--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -167,6 +167,7 @@
   "click_to_refresh": "Klik om te vernieuwen",
   "click_words": "Klik op woorden in de juiste volgorde",
   "close": "Sluiten",
+  "coin_performance": "Muntprestaties",
   "comma": "Komma",
   "comment": "Commentaar",
   "complete": "Compleet",
