--- a/web/angular-wallet/src/locales/pl.json
+++ b/web/angular-wallet/src/locales/pl.json
@@ -167,6 +167,7 @@
   "click_to_refresh": "Kliknij, aby odświeżyć",
   "click_words": "Klikaj słowa we właściwej kolejności",
   "close": "Zamknij",
+  "coin_performance": "Wydajność monet",
   "comma": "Przecinek",
   "comment": "Komentarz",
   "complete": "Zakończono",
