--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -167,6 +167,7 @@
   "click_to_refresh": "Clique para atualizar",
   "click_words": "Clique nas palavras na ordem correta",
   "close": "Fechar",
+  "coin_performance": "Desempenho da moeda",
   "comma": "Vírgula",
   "comment": "Comente",
   "complete": "Completo",
