--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -167,6 +167,7 @@
   "click_to_refresh": "Faceți clic pentru a actualiza",
   "click_words": "Faceți clic pe cuvinte în ordine corectă",
   "close": "Închidere",
+  "coin_performance": "Performanța monedei",
   "comma": "Virgulă",
   "comment": "cometariu",
   "complete": "Complet",
