--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -167,6 +167,7 @@
   "click_to_refresh": "Нажмите, чтобы обновить",
   "click_words": "Нажмите слова в правильном порядке",
   "close": "Закрыть",
+  "coin_performance": "Производительность монеты",
   "comma": "запятая",
   "comment": "Комментарий",
   "complete": "Завершено",
