--- a/web/angular-wallet/src/locales/sh.json
+++ b/web/angular-wallet/src/locales/sh.json
@@ -166,6 +166,7 @@
   "click_to_refresh": "Kliknite da biste osvežili",
   "click_words": "",
   "close": "Zatvori",
+  "coin_performance": "",
   "comma": "",
   "comment": "Komentar",
   "complete": "Gotovo",
