--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -167,6 +167,7 @@
   "click_to_refresh": "Kliknutím obnovíte",
   "click_words": "Kliknite na slová v správnom poradí",
   "close": "Zavrieť",
+  "coin_performance": "Výkonnosť mincí",
   "comma": "čiarka",
   "comment": "komentár",
   "complete": "Hotovo",
