--- a/web/angular-wallet/src/locales/sr-cs.json
+++ b/web/angular-wallet/src/locales/sr-cs.json
@@ -152,6 +152,7 @@
   "click_to_claim": "Click here to claim your free Burst.",
   "click_words": "Кликните речи исправним редоследом",
   "close": "Zatvori",
+  "coin_performance": "Цоин Перформанце",
   "comma": "Зарез",
   "comment": "Komentariši",
   "complete": "Završeno",
