--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -167,6 +167,7 @@
   "click_to_refresh": "Кликните да бисте освежили",
   "click_words": "Кликните речи исправним редоследом",
   "close": "Затвори",
+  "coin_performance": "Цоин Перформанце",
   "comma": "Зарез",
   "comment": "Коментар",
   "complete": "Завршено",
