--- a/web/angular-wallet/src/locales/tr.json
+++ b/web/angular-wallet/src/locales/tr.json
@@ -167,6 +167,7 @@
   "click_to_refresh": "Yenilemek için tıklayın",
   "click_words": "Doğru sırayla kelimeleri tıklayın",
   "close": "Kapat",
+  "coin_performance": "Para Performansı",
   "comma": "Virgül",
   "comment": "Yorum Yap",
   "complete": "Tamamlanmış",
