--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -167,6 +167,7 @@
   "click_to_refresh": "Натисніть, щоб оновити",
   "click_words": "Клацніть слова у правильному порядку",
   "close": "Закрити",
+  "coin_performance": "Продуктивність монети",
   "comma": "Кома",
   "comment": "Коментар",
   "complete": "Завершено",
