--- a/web/angular-wallet/src/locales/zh-cn.json
+++ b/web/angular-wallet/src/locales/zh-cn.json
@@ -167,6 +167,7 @@
   "click_to_refresh": "点击刷新",
   "click_words": "单击正确顺序的单词",
   "close": "关闭",
+  "coin_performance": "硬币表现",
   "comma": "逗号",
   "comment": "评论",
   "complete": "完成",
