--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -167,6 +167,7 @@
   "click_to_refresh": "Klepnutím obnovíte",
   "click_words": "Klikněte na slova ve správném pořadí",
   "close": "Zavřít",
+  "coin_performance": "Výkon mincí",
   "comma": "Čárka",
   "comment": "Komentář",
   "complete": "Hotovo",
