--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -167,6 +167,7 @@
   "click_to_refresh": "Κάντε κλικ για ανανέωση",
   "click_words": "Κάντε κλικ στις λέξεις με τη σωστή σειρά",
   "close": "Κλείσιμο",
+  "coin_performance": "Επιδόσεις κερμάτων",
   "comma": "Κόμμα",
   "comment": "Σχόλιο",
   "complete": "Ολοκλήρωση",
