Feat/new dashboard layout 2 (#1289)
* fix: Changed MarketInfo API

* fix: uncomment loading flag setter

* chore: cleaning up

* feat: new balance chart

* chore: cleaning up

* feat: Layout redefined for dashboard, new widget

* feat: Responsive Grid Layout

* feat: Added activation message

* feat: improved mobile responsiveness

* feat: New Market Info Widget

* chore: More translations

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -167,6 +167,7 @@
   "click_to_refresh": "Кликнете, за да обновите",
   "click_words": "Кликнете върху думи в правилен ред",
   "close": "Затвори",
+  "coin_performance": "Изпълнение на монети",
   "comma": "запетая",
   "comment": "коментар",
   "complete": "Завърши",
@@ -1016,7 +1017,7 @@
   "wrong_pin": "Грешен ПИН",
   "x_confirmations": "__x__ потвърждения",
   "yes": "Да",
-  "yesterdays_change": "Промяна вчера",
+  "yesterdays_change": "Последна 24 часа смяна",
   "you": "Вие",
   "you_received_assets": "Получихте един __name__ актив.",
   "you_received_assets_plural": "Вие получихте __count__ __name__ активи.",
