--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -167,6 +167,7 @@
   "click_to_refresh": "Feu clic per actualitzar",
   "click_words": "Feu clic a les paraules en ordre correcte",
   "close": "Tancar",
+  "coin_performance": "Rendiment de monedes",
   "comma": "Coma",
   "comment": "Comentari",
   "complete": "Complet",
@@ -1016,7 +1017,7 @@
   "wrong_pin": "PIN incorrecte",
   "x_confirmations": "__x__ confirmacions",
   "yes": "Si",
-  "yesterdays_change": "Canvi d’ahir",
+  "yesterdays_change": "Canvi de les últimes 24 hores",
   "you": "Vosté",
   "you_received_assets": "Ha rebut 1 Actiu de __name__ .",
   "you_received_assets_plural": "Ha rebut Actius de __count__ __name__ .",
