--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -167,6 +167,7 @@
   "click_to_refresh": "Klepnutím obnovíte",
   "click_words": "Klikněte na slova ve správném pořadí",
   "close": "Zavřít",
+  "coin_performance": "Výkon mincí",
   "comma": "Čárka",
   "comment": "Komentář",
   "complete": "Hotovo",
@@ -1016,7 +1017,7 @@
   "wrong_pin": "Chybný kód PIN",
   "x_confirmations": "__x__ confirmations",
   "yes": "Ano",
-  "yesterdays_change": "Včerejší změna",
+  "yesterdays_change": "Změna za posledních 24 hodin",
   "you": "Vy",
   "you_received_assets": "You received <a href='#' data-goto-asset='__asset__'>1 __name__ asset</a>.",
   "you_received_assets_plural": "You received <a href='#' data-goto-asset='__asset__'>__count__ __name__ assets</a>.",
