--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -167,6 +167,7 @@
   "click_to_refresh": "Click to refresh",
   "click_words": "Click words in correct order",
   "close": "Close",
+  "coin_performance": "Coin Performance",
   "comma": "Comma",
   "comment": "Comment",
   "complete": "Complete",
@@ -1029,7 +1030,7 @@
   "wrong_pin": "Wrong PIN",
   "x_confirmations": "__x__ confirmations",
   "yes": "Yes",
-  "yesterdays_change": "Yesterday's Change",
+  "yesterdays_change": "Last 24 Hour's Change",
   "you": "You",
   "you_received_assets": "You received <a href='#' data-goto-asset='__asset__'>1 __name__ asset</a>.",
   "you_received_assets_plural": "You received <a href='#' data-goto-asset='__asset__'>__count__ __name__ assets</a>.",
