--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -167,6 +167,7 @@
   "click_to_refresh": "Fai clic para actualizar",
   "click_words": "Faga clic nas palabras en orde correcta",
   "close": "Close",
+  "coin_performance": "Rendemento de moeda",
   "comma": "Coma",
   "comment": "Comentario",
   "complete": "Completo",
@@ -1016,7 +1017,7 @@
   "wrong_pin": "PIN incorrecto",
   "x_confirmations": "__x__ confirmacións",
   "yes": "Sí",
-  "yesterdays_change": "Cambio de onte",
+  "yesterdays_change": "Cambio das 24 horas pasadas",
   "you": "Ti",
   "you_received_assets": "You received <a href='#' data-goto-asset='__asset__'>1 __name__ asset</a>.",
   "you_received_assets_plural": "You received <a href='#' data-goto-asset='__asset__'>__count__ __name__ assets</a>.",
