--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -167,6 +167,7 @@
   "click_to_refresh": "クリックして更新",
   "click_words": "正しい順序で単語をクリックします",
   "close": "閉じる",
+  "coin_performance": "コイン性能",
   "comma": "コンマ",
   "comment": "コメント",
   "complete": "完了",
@@ -1016,7 +1017,7 @@
   "wrong_pin": "間違ったPIN",
   "x_confirmations": "__x__ 確認",
   "yes": "はい",
-  "yesterdays_change": "昨日の変更",
+  "yesterdays_change": "過去24時間の変更",
   "you": "あなた",
   "you_received_assets": "You received <a href='#' data-goto-asset='__asset__'>1 __name__ asset</a>.",
   "you_received_assets_plural": "You received <a href='#' data-goto-asset='__asset__'>__count__ __name__ assets</a>.",
