--- a/web/angular-wallet/src/locales/pt-pt.json
+++ b/web/angular-wallet/src/locales/pt-pt.json
@@ -167,6 +167,7 @@
   "click_to_refresh": "Clique para atualizar",
   "click_words": "Clique nas palavras na ordem correta",
   "close": "Fechar",
+  "coin_performance": "Desempenho da moeda",
   "comma": "Vírgula",
   "comment": "Comente",
   "complete": "Completo",
@@ -1016,7 +1017,7 @@
   "wrong_pin": "PIN errado",
   "x_confirmations": "__x__ confirmações",
   "yes": "Sim",
-  "yesterdays_change": "Mudança de ontem",
+  "yesterdays_change": "Alteração nas últimas 24 horas",
   "you": "Você",
   "you_received_assets": "Você recebeu <a href='#' data-goto-asset='__asset__'> 1 __name__ ativos</a>.",
   "you_received_assets_plural": "Você recebeu <a href='#' data-goto-asset='__asset__'> __count__ __name__ ativos</a>.",
