--- a/web/angular-wallet/src/locales/sr-cs.json
+++ b/web/angular-wallet/src/locales/sr-cs.json
@@ -152,6 +152,7 @@
   "click_to_claim": "Click here to claim your free Burst.",
   "click_words": "Кликните речи исправним редоследом",
   "close": "Zatvori",
+  "coin_performance": "Цоин Перформанце",
   "comma": "Зарез",
   "comment": "Komentariši",
   "complete": "Završeno",
@@ -945,6 +946,7 @@
   "with_burst": "Sa BURST-om",
   "x_confirmations": "__x__ konfirmacija",
   "yes": "Da",
+  "yesterdays_change": "Промена у последњих 24 часа",
   "you": "Vi",
   "you_received_assets": "Primili ste <a href='#' data-goto-asset='__asset__'>1 __name__ asset-a</a>.",
   "you_received_assets_plural": "Primili ste <a href='#' data-goto-asset='__asset__'>__count__ __name__ asset-a</a>.",
