--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -167,6 +167,7 @@
   "click_to_refresh": "Кликните да бисте освежили",
   "click_words": "Кликните речи исправним редоследом",
   "close": "Затвори",
+  "coin_performance": "Цоин Перформанце",
   "comma": "Зарез",
   "comment": "Коментар",
   "complete": "Завршено",
@@ -1016,7 +1017,7 @@
   "wrong_pin": "Погрешан ПИН",
   "x_confirmations": "__x__ конфирмација",
   "yes": "Да",
-  "yesterdays_change": "Јучерашња промена",
+  "yesterdays_change": "Промена у последњих 24 часа",
   "you": "Ви",
   "you_received_assets": "Примили сте <a href='#' data-goto-asset='__asset__'>1 __name__ ассет-а</a>.",
   "you_received_assets_plural": "Примили сте <a href='#' data-goto-asset='__asset__'>__count__ __name__ ассет-а</a>.",
