--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -167,6 +167,7 @@
   "click_to_refresh": "Haga clic para actualizar",
   "click_words": "Haga clic en las palabras en el orden correcto.",
   "close": "Cerrar",
+  "coin_performance": "Rendimiento de monedas",
   "comma": "Coma",
   "comment": "Comentario",
   "complete": "Completo",
@@ -1016,7 +1017,7 @@
   "wrong_pin": "Pin erróneo",
   "x_confirmations": "__x__ confirmaciones",
   "yes": "Sí",
-  "yesterdays_change": "Cambio de ayer",
+  "yesterdays_change": "Cambio de las últimas 24 horas",
   "you": "Usted",
   "you_received_assets": "Has recibido <a href='#' data-goto-asset='__asset__'>1 __name__ asset</a>.",
   "you_received_assets_plural": "Usted recibió <a href='#' data-goto-asset='__asset__'>__count__ __name__ assets</a>.",
