--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -167,6 +167,7 @@
   "click_to_refresh": "Päivitä napsauttamalla",
   "click_words": "Napsauta sanoja oikeassa järjestyksessä",
   "close": "Sulje",
+  "coin_performance": "Kolikon suorituskyky",
   "comma": "Pilkku",
   "comment": "Kommentti",
   "complete": "Valmis",
@@ -1016,7 +1017,7 @@
   "wrong_pin": "Väärä PIN-koodi",
   "x_confirmations": "__x__ vahvistusta",
   "yes": "Kyllä",
-  "yesterdays_change": "Eilinen muutos",
+  "yesterdays_change": "Viimeisen 24 tunnin muutos",
   "you": "Sinä",
   "you_received_assets": "You received <a href='#' data-goto-asset='__asset__'>1 __name__ asset</a>.",
   "you_received_assets_plural": "You received <a href='#' data-goto-asset='__asset__'>__count__ __name__ assets</a>.",
