--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -167,6 +167,7 @@
   "click_to_refresh": "ताज़ा करने के लिए क्लिक करें",
   "click_words": "शब्दों को सही क्रम में क्लिक करें",
   "close": "बंद करें",
+  "coin_performance": "सिक्का प्रदर्शन",
   "comma": "अल्पविराम",
   "comment": "टिप्पणी",
   "complete": "पूरा",
@@ -1016,7 +1017,7 @@
   "wrong_pin": "गलत पिन",
   "x_confirmations": "__x__ confirmations",
   "yes": "Yes",
-  "yesterdays_change": "कल का बदलाव",
+  "yesterdays_change": "अंतिम 24 घंटे का परिवर्तन",
   "you": "You",
   "you_received_assets": "You received <a href='#' data-goto-asset='__asset__'>1 __name__ asset</a>.",
   "you_received_assets_plural": "You received <a href='#' data-goto-asset='__asset__'>__count__ __name__ assets</a>.",
