--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -167,6 +167,7 @@
   "click_to_refresh": "Klik untuk menyegarkan",
   "click_words": "Klik kata dalam urutan yang benar",
   "close": "Tutup",
+  "coin_performance": "Kinerja Koin",
   "comma": "Koma",
   "comment": "Komentar",
   "complete": "Menyelesaikan",
@@ -1016,7 +1017,7 @@
   "wrong_pin": "PIN salah",
   "x_confirmations": "konfirmasi __x__",
   "yes": "Ya",
-  "yesterdays_change": "Perubahan kemarin",
+  "yesterdays_change": "Perubahan 24 Jam Terakhir",
   "you": "Anda",
   "you_received_assets": "You received <a href='#' data-goto-asset='__asset__'>1 __name__ asset</a>.",
   "you_received_assets_plural": "You received <a href='#' data-goto-asset='__asset__'>__count__ __name__ assets</a>.",
