--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -167,6 +167,7 @@
   "click_to_refresh": "Spustelėkite, jei norite atnaujinti",
   "click_words": "Spustelėkite žodžius teisinga tvarka",
   "close": "Uždaryti",
+  "coin_performance": "Monetų pasirodymas",
   "comma": "Kablelis",
   "comment": "Komentuoti",
   "complete": "Pabaigta",
@@ -1016,7 +1017,7 @@
   "wrong_pin": "Klaidingas PIN kodas",
   "x_confirmations": "__x__ patvirtinimai",
   "yes": "Taip",
-  "yesterdays_change": "Vakarinis pokytis",
+  "yesterdays_change": "Paskutinės 24 valandos pokytis",
   "you": "Jūs",
   "you_received_assets": "Jūs gavote <a href='#' data-goto-asset='__asset__'> 1 __name__ aktyvą</a>.",
   "you_received_assets_plural": "Jūs gavote <a href='#' data-goto-asset='__asset__'> __count__ __name__ aktyvus</a>.",
