--- a/web/angular-wallet/src/locales/pl.json
+++ b/web/angular-wallet/src/locales/pl.json
@@ -167,6 +167,7 @@
   "click_to_refresh": "Kliknij, aby odświeżyć",
   "click_words": "Klikaj słowa we właściwej kolejności",
   "close": "Zamknij",
+  "coin_performance": "Wydajność monet",
   "comma": "Przecinek",
   "comment": "Komentarz",
   "complete": "Zakończono",
@@ -1025,7 +1026,7 @@
   "wrong_pin": "Zły kod PIN",
   "x_confirmations": "__x__ potwierdzeń",
   "yes": "Tak",
-  "yesterdays_change": "Wczorajsza zmiana",
+  "yesterdays_change": "Zmiana z ostatnich 24 godzin",
   "you": "Ty",
   "you_received_assets": "Otrezymałeś <a href='#' data-goto-asset='__asset__'>1 __name__ asset</a>.",
   "you_received_assets_plural": "Otrzymałeś <a href='#' data-goto-asset='__asset__'>__count__ __name__ assets</a>.",
