--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -167,6 +167,7 @@
   "click_to_refresh": "Clique para atualizar",
   "click_words": "Clique nas palavras na ordem correta",
   "close": "Fechar",
+  "coin_performance": "Desempenho da moeda",
   "comma": "Vírgula",
   "comment": "Comente",
   "complete": "Completo",
@@ -1020,7 +1021,7 @@
   "wrong_pin": "PIN errado",
   "x_confirmations": "__x__ confirmações",
   "yes": "Sim",
-  "yesterdays_change": "Variação em 24h",
+  "yesterdays_change": "Alteração nas últimas 24 horas",
   "you": "Você",
   "you_received_assets": "Você recebeu 1 ativo __name__.",
   "you_received_assets_plural": "Você recebeu __count__ ativos __name__.",
