--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -167,6 +167,7 @@
   "click_to_refresh": "Faceți clic pentru a actualiza",
   "click_words": "Faceți clic pe cuvinte în ordine corectă",
   "close": "Închidere",
+  "coin_performance": "Performanța monedei",
   "comma": "Virgulă",
   "comment": "cometariu",
   "complete": "Complet",
@@ -1016,7 +1017,7 @@
   "wrong_pin": "Cod PIN greșit",
   "x_confirmations": "__x__ confirmări",
   "yes": "Da",
-  "yesterdays_change": "Schimbarea de ieri",
+  "yesterdays_change": "Ultima schimbare de 24 de ore",
   "you": "Dvs",
   "you_received_assets": "Ai primit 1 __name__ activă.",
   "you_received_assets_plural": "Ai primit __count__ __name__ active.",
