--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -167,6 +167,7 @@
   "click_to_refresh": "Натисніть, щоб оновити",
   "click_words": "Клацніть слова у правильному порядку",
   "close": "Закрити",
+  "coin_performance": "Продуктивність монети",
   "comma": "Кома",
   "comment": "Коментар",
   "complete": "Завершено",
@@ -1016,7 +1017,7 @@
   "wrong_pin": "Неправильний PIN-код",
   "x_confirmations": "__x__ підтверджень",
   "yes": "Так",
-  "yesterdays_change": "Вчорашня зміна",
+  "yesterdays_change": "Останні 24 години зміни",
   "you": "Ви",
   "you_received_assets": "Ви отримали <a href='#' data-goto-asset='__asset__'>1 __name__ активів</a>.",
   "you_received_assets_plural": "Ви отримали <a href='#' data-goto-asset='__asset__'>__count__ __name__ активів</a>.",
