--- a/web/angular-wallet/src/locales/zh-tw.json
+++ b/web/angular-wallet/src/locales/zh-tw.json
@@ -167,6 +167,7 @@
   "click_to_refresh": "点击刷新",
   "click_words": "单击正确顺序的单词",
   "close": "關閉​​​",
+  "coin_performance": "硬币表现",
   "comma": "逗号",
   "comment": "评论",
   "complete": "完成",
@@ -1016,7 +1017,7 @@
   "wrong_pin": "密码错误",
   "x_confirmations": "__x__ 確認",
   "yes": "是",
-  "yesterdays_change": "昨天的变化",
+  "yesterdays_change": "最近24小时的变更",
   "you": "您",
   "you_received_assets": "您收到 <a href='#' data-goto-asset='__asset__'> 1 __name__ 資產</a>。",
   "you_received_assets_plural": "您收到 <a href='#' data-goto-asset='__asset__'> __count__ __name__ 資產</a>。",
