--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -1029,5 +1029,6 @@
   "your_alias_sale_offer": "Jūs siūlote ši pseudonimą pardavimui.",
   "your_name": "Jūsų vardas",
   "your_passphrase": "Jūsų slaptažodis",
-  "youve_got_burst": "Aš gavau Burst!"
+  "youve_got_burst": "Aš gavau Burst!",
+  "dashboard_welcome_title": "Sveiki atvykę į Finiksą! Čia bus rodomi paskutiniai jūsų sąskaitos likučiai."
 }
