--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -1029,5 +1029,6 @@
   "your_alias_sale_offer": "Ponúkate tento alias na predaj.",
   "your_name": "Vaše Meno",
   "your_passphrase": "Vaše heslo",
-  "youve_got_burst": "You've got Burst!"
+  "youve_got_burst": "You've got Burst!",
+  "dashboard_welcome_title": "Vitajte vo Phoenixe! Tu sa zobrazia vaše posledné zostatky na účte."
 }
