--- a/web/angular-wallet/src/locales/sr-cs.json
+++ b/web/angular-wallet/src/locales/sr-cs.json
@@ -958,5 +958,92 @@
   "your_alias_sale_offer": "Vi nudite ovaj alias na prodaju.",
   "your_name": "Vaše Ime",
   "your_passphrase": "Vaša Lozinka",
-  "youve_got_burst": "You've got Burst!"
+  "youve_got_burst": "You've got Burst!",
+  "dashboard_welcome_title": "Добродошли у Пхоеник! Овде ће се појавити ваша недавна стања на рачуну.",
+  "click_to_copy_passphrase": "Кликните овде да копирате лозинку у међуспремник",
+  "blocks_details": "Блокирај детаље",
+  "block_height": "Блоцк Хеигхт",
+  "block_id": "ИД блока",
+  "block_reward": "Блокирај награду",
+  "available_supply": "Доступна понуда",
+  "back": "Назад",
+  "balance_history": "Баланце Хистори",
+  "amount_nqt": "Износ",
+  "cheap_fee": "Јефтино",
+  "click_for_changes": "Кликните овде да видите шта се променило",
+  "click_for_other_platforms": "Кликните овде ако желите другу платформу",
+  "click_here_for_help": "Кликните овде да сазнате више о томе",
+  "click_to_apply": "Кликните да бисте је пријавили",
+  "click_to_refresh": "Кликните за освежавање",
+  "define_your_pin": "Дефинишите свој ПИН",
+  "domain": "Домен",
+  "download": "Преузимање",
+  "download_started": "Преузимање је почело",
+  "downloading_update": "Ажурирање се преузима. Бићете обавештени по завршетку.",
+  "ec_block_height": "ЕЦ Блоцк Хеигхт",
+  "ec_block_id": "ЕЦ Блоцк ИД",
+  "enter_pin": "Унесите ПИН",
+  "fee_nqt": "Надокнада",
+  "finish": "Заврши",
+  "generate_passphrase": "Генерисање лозинке",
+  "generator_address": "Адреса генератора",
+  "generator_id": "Генератор ИД",
+  "hint_offline_account": "Гледате овај налог",
+  "hint_online_account": "Овим рачуном можете извршити трансакције",
+  "input_pin": "Унесите ПИН",
+  "issuer": "Издавалац",
+  "lease_balance": "Леасе Баланце",
+  "lease_balance_help": "Број блокова који ће закуп трајати. 9000 блокова је око 10 дана.",
+  "lease_balance_help_2": "Закуп од 9000 блокова је око 10 дана.",
+  "lease_balance_help_var": "Закуп блокова __блоцкс__ износи око __даис__ дана.",
+  "lease_balance_to_account": "Ставите свој новац на други рачун.",
+  "lease_balance_warning": "Запамтите: Једном када се преда закуп, не може се поништити.",
+  "lease_your_balance": "Закупи свој биланс",
+  "leased_out": "Закупљено",
+  "leased_soon": "Закупљено ускоро",
+  "leasing": "Леасинг",
+  "market_capitalization": "Тржишна капитализација",
+  "market_info": "Информације о тржишту",
+  "market_rank": "Маркет Ранк",
+  "memorize_passphrase_help_addon": "Ако изгубите лозинку, нећете моћи извршити ниједну трансакцију, тј. Ваши новчићи су изгубљени. Пасивна фраза се не може повратити. Држите ову лозинку тајном. Сви који познају лозинку де фацто су власници налога.",
+  "minimum_fee": "Минимално",
+  "multi_out_payment": "Мулти исплата",
+  "multi_out_same_payment": "Вишеструка исплата по истом износу",
+  "network": "Мрежа",
+  "new_message": "Нова порука",
+  "non_verified_source": "Непознат, потенцијално несигуран извор",
+  "nonce": "Нонце",
+  "number_transactions": "Број трансакција",
+  "payment": "Плаћање",
+  "payments": "Плаћања",
+  "pin_hint": "ПИН се користи за верификацију акција извршених са вашим налогом. То може бити кратка алфанумеричка вредност коју је лако упамтити. Ако заборавите свој ПИН, можете једноставно поново створити свој налог користећи претходно генерирану лозинку.",
+  "price_chart_7d": "Табела цена 7 дана",
+  "priority_fee": "Приоритет",
+  "qr_code_data": "Подаци КР кода",
+  "recent_transactions_since": "Недавне трансакције од",
+  "recipient_address": "Прималац адреса",
+  "recipient_id": "ИД примаоца",
+  "recipients": "Примаоци",
+  "request_processing_time": "Захтевајте време обраде",
+  "reward_recipient": "Наградни прималац",
+  "scoop_num": "Сцооп Нумбер",
+  "search": "Претрага",
+  "search_or_start_message": "Претражите или покрените нову поруку",
+  "secure": "Сецуре",
+  "sender_address": "Адреса пошиљатеља",
+  "sender_id": "ИД пошиљаоца",
+  "signature": "Потпис",
+  "smart_contract": "Смарт Цонтрацт",
+  "smart_contract_creation": "Паметно креирање уговора",
+  "smart_contract_payment": "Плаћање Смарт уговора",
+  "smooth_curve": "Смоотх Цурве",
+  "spend_all": "Потрошите све",
+  "success_lease_balance": "Ваш салдо биће закупљен у 1440 блокова.",
+  "suggested_fee": "Предложене накнаде",
+  "suggested_fee_help": "Јефтина накнада: 50% шансе трансакције ће се извршити у једном од наредних десет блокова. <бр /> Стандардна накнада: 50% шанса трансакција ће се извршити у наредном блоку. <бр /> Приоритетна накнада: 90% шанса ће обавити трансакцију у следећем блоку и 99% у наредна два блока.",
+  "update_check": "Ажурирање провера",
+  "valid_thru": "Вриједи до краја",
+  "verified_source": "Провјерен и сигуран извор",
+  "volume_24h": "Волуме 24х",
+  "wrong_pin": "Погрешан ПИН"
 }
