--- a/web/angular-wallet/src/locales/zh-tw.json
+++ b/web/angular-wallet/src/locales/zh-tw.json
@@ -1029,5 +1029,6 @@
   "your_alias_sale_offer": "您的該別名正在出售。",
   "your_name": "您的名字",
   "your_passphrase": "您的密碼",
-  "youve_got_burst": "You've got Burst!"
+  "youve_got_burst": "You've got Burst!",
+  "dashboard_welcome_title": "欢迎来到凤凰城！您最近的帐户余额将显示在此处。"
 }
