--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -210,6 +210,7 @@
   "current_quantity": "Current Quantity",
   "current_version": "Current version",
   "dashboard": "Dashboard",
+  "dashboard_welcome_title": "Welcome to Phoenix! Your recent account balances will appear here.",
   "data": "Data",
   "data_is_encrypted": "Data is encrypted.",
   "date": "Date",
